--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.0.6
   flutter_swiper: ^1.1.6
+  table_calendar: ^2.2.3
 
 
 dev_dependencies:
