--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   fluttertoast: ^8.0.6
   flutter_swiper: ^1.1.6
   table_calendar: ^2.2.3
+  splashscreen: ^1.2.0
 
 
 dev_dependencies:
